# IVbenchmark

./: .gitmodules  CMakeLists.txt  README.md
data/: CMakeLists.txt  hg38.fa.fai  sampled.bam  sampled.bcf
lib/: biocpp-all-config.cmake  seqan2-config.cmake  seqan3-config.cmake  seqtk-config.cmake
lib/io2/: CMakeLists.txt  io2-config.cmake
scripts/: evaluate.sh  prepareFiles.sh  run-benchmark.sh
src/bam-benchmarks/: CMakeLists.txt  benchmark_read
src/bam-benchmarks/src/read/: io2.cpp  ivio.cpp  seqan2.cpp
src/bcf-benchmarks/: CMakeLists.txt
src/bcf-benchmarks/src/copy/: main.cpp
src/bcf-benchmarks/src/read/: ivio.cpp
src/faidx-benchmarks/: CMakeLists.txt  benchmark_read  benchmark_read.py
src/faidx-benchmarks/src/read/: ivio.cpp
src/faidx_benchmarks/: benchmark_read_stream
src/fasta-benchmarks/: CMakeLists.txt  benchmark_read  benchmark_read2  benchmark_write
src/fasta-benchmarks/src/read/: direct.cpp  extreme.cpp  io2.cpp  ivio.cpp  ivio_mt.cpp  main.cpp  seqan3.cpp  seqtk.cpp
src/fasta-benchmarks/src/read_stream/: bio.cpp  io2.cpp  ivio.cpp  main.cpp  seqan2.cpp  seqan3.cpp
src/fasta-benchmarks/src/write/: ivio.cpp  main.cpp  seqan2.cpp  seqan3.cpp
src/fastq-benchmarks/: CMakeLists.txt
src/fastq-benchmarks/src/read/: bio.cpp  ivio.cpp  main.cpp  seqan2.cpp
src/sam-benchmarks/: CMakeLists.txt  benchmark_read
src/sam-benchmarks/src/read/: io2.cpp  ivio.cpp  main.cpp  seqan2.cpp  seqan3.cpp
src/utils/: CMakeLists.txt  build.sh
src/vcf-benchmarks/: CMakeLists.txt
src/vcf-benchmarks/src/copy/: bio.cpp  ivio.cpp  main.cpp  seqan2.cpp
src/vcf-benchmarks/src/read/: bio.cpp  ivio.cpp  main.cpp  seqan2.cpp
